# llm_client

./: .gitignore  README.md  pyproject.toml
examples/: example.py
src/llm_client/: __init__.py  main.py
src/llm_client/clients/: openai_client.py
src/llm_client/conf/: llm.example.yaml
src/llm_client/utils/: data_processing.py  llm_config.py  log_helper.py
tests/: test_json_response.py  test_stream_with_tool_call.py
