[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-client"
version = "0.1.0"
description = "Simple OpenAI/LLM client with streaming and tool-calls"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "openai>=2.9.0",
    "pyyaml>=6.0.3",
    "pydantic>=2.7.0",
]

[project.scripts]
llm-client = "llm_client.main:cli"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
include = ["llm_client*"]

[tool.setuptools.package-data]
llm_client = ["conf/*.example.yaml"]
